Confirm dialogs are not modal
Affected version
42.alpha (Fedora Rawhide); 42.beta-62dc13ed (Flatpak Nightly)
Steps to reproduce
Try to permanently delete any file (with Shift+Del or on a remote location)
Current behavior
The "Are You Sure?" dialog appears free-floating, can be dragged independently, doesn't grey out the main window and doesn't block interaction with the main window.
Expected behavior
The dialog should be 'attached' to the main window, like the About, Properties and Preferences dialogs are.