general: Make message dialogs modal again

After the GTK 4 port, some dialogs are no more modal. This is regression,
which is probably caused by the fact, that this needs to be explicitly
specified now. Let's make all the `GtkMessageDialog` dialogs modal again.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/2117